experimental/parser/testdata/parser/syntax/eof_after_eq.proto.stderr.txt
warning: missing `package` declaration
 --> testdata/parser/syntax/eof_after_eq.proto
   = note: failing to specify a package places the file in the empty package
   = note: using the empty package is discouraged

error: unexpected end-of-file in expression
  --> testdata/parser/syntax/eof_after_eq.proto:15:9
   | 
15 | syntax = 
   |         ^ expected expression

encountered 1 error and 1 warning
